--- a/cellranger_test_02/workflow/Snakefile
+++ b/cellranger_test_02/workflow/Snakefile
@@ -44,6 +44,20 @@ rule pure_IntronExon:
         rules.runMultiqc1.output.html,
         rules.copyGtf.output.gtf
 
+# alternative rule to avoid the multiqc step. thsi is useful for testing with multiple runs.
+rule pure_IntronExon_short:
+    '''
+    rule to produce the pure exon bam file.
+    '''
+    input:
+        expand(rules.moveCellrangerSummary.output.summary, sample=config['SAMPLES']),
+        expand(rules.moveCellrangerIntronExon.output.bam_file, sample=config['SAMPLES']),
+        expand(rules.runPureExon.output.exon_count, sample=config['SAMPLES']),
+        expand(rules.runPureIntron.output.intron_count, sample=config['SAMPLES']),
+        expand(rules.runPureAll.output.all_count, sample=config['SAMPLES']),
+        rules.copyGtf.output.gtf
+
+
 # rule all_cellranger_test:
 #     '''
 #     rule to run the default analysis using cellranger.
